Version 1.0-6 (2013-01-14)
o Added label.ellipse() as an exported function.
o heplot() gets a label.pos= argument allowing
  the label position to be specified (bottom, left, top, right or center)

Version 1.0-4 (2012-12-29)
o Added interpPlot for plotting interpolations between two data sets, with data ellipses, etc.
o interpPlot gains add=, points= and col= arguments

Version 1.0-2 (2012-12-05)
o Added schooldata and further example of comparison of mlm with robmlm()

Version 1.0-1 (2012-10-18)
o Added robmlm methods for robust mlms with print and summary methods and a vcov.mlm method

Version 1.0-0 (2012-6-3)
o Added Olso data
o Corrected error in demo/OBK.R

Version 0.9-13 (2012-5-18)
o Extended HE-examples vignette with example based on SocGrades data

Version 0.9-12 (2012-04-03)
o Added Skulls data
o Extended HE-examples vignette with example based on Skulls data
o Changed the default colors for heplot() and heplot1d() to allow global setting
  of options("heplot.colors"); similarly, heplot3d() now allows a global option
  for colors, options("heplot3d.colors"), differing only in using pink for error
  ellipsoid.
o Extended Hernior.Rd examples to show 1D plots in canonical space; added a discussion of
  this example to HE-examples vignette.
o Extended SocGrades.Rd examples to show plots in canonical space.

Version 0.9-11 (2012-01-12)
o Added Probe1, Probe2 data sets-- repeated measures design
o Added Sake data

Version 0.9-10 (2011-09-12)
o Fixed Authors@R in DESCRIPTION for R 2.14.x
o Added var.labels argument to pairs.mlm
o gsorth.R: Made sd() a local function to avoid deprecated warnings

Version 0.9-9 (2011-06-10)
o Added data(Hernior), another MMRA, cancorr example data set
o Added data(SocGrades), another MANOVA, MMRA, cancorr example data set
o Corrected buglet with fill.alpha in heplot

Version 0.9-8 (2011-04-8)
o Added an MMRA example to HE-examples vignette